shell: Fix media-player keys not working

gsd-media-keys doesn't have a .service file itself, but responds to the
org.gnome.SettingsDaemon.MediaKeys name nonetheless. This however seems
to mean that signals emitted by gsd-media-keys will not have the
expected sender name. Seeing as the signals come from a proxy we created
ourselves with a well-known name, there's really no need to filter any
further.

This fixes pressed media player keys not doing anything with more recent
versions of gnome-settings-daemon (3.24).

https://bugzilla.gnome.org/show_bug.cgi?id=789738